--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,33 @@
 body {
+	margin: 0;
+	padding: 0;
 	width: 100%;
 	height: 100%;
 	background: url("../images/background.jpg") center / cover;
+	text-align: center;
+}
+
+#wrapper {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.nav-container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 40%;
+	height: 40%;
+	margin: -10% 0 0 -20%;
+}
+
+#search {
+	width: 100%;
+	height: 32px;
+	padding-left: 6px;
+	border: none;
+	border-radius: 2px;
+	background: #181818;
+	color: #d8d8d8;
 }
