--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,16 @@ body {
 	height: 100%;
 	background: url("../images/background.jpg") center / cover;
 	text-align: center;
-}
-
-#wrapper {
-	position: relative;
-	width: 100%;
-	height: 100%;
+	font-family: monospace;
 }
 
 .nav-container {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 40%;
-	height: 40%;
-	margin: -10% 0 0 -20%;
+	width: 624px;
+	height: 300px;
+	margin: -150px 0 0 -312px;
 }
 
 #search {
@@ -27,7 +22,79 @@ body {
 	height: 32px;
 	padding-left: 6px;
 	border: none;
-	border-radius: 2px;
 	background: #181818;
 	color: #d8d8d8;
+}
+
+.links-list {
+	list-style: none;
+	width: 100%;
+	margin-top: 8px;
+	text-align: center;
+	font-size: 0;
+}
+
+.links-box {
+	width: 150;
+	height: 150px;
+	margin-right: 8px;
+	display: inline-block;
+	vertical-align: top;
+	text-align: center;
+	background: #181818;
+	color: #d8d8d8;
+}
+
+.last {
+	margin: 0;
+}
+
+.links-titlebar {
+	width: 100%;
+	height: 32px;
+	line-height: 32px;
+	font-size: 10pt;
+	color: #f8f8f8;
+	vertical-align: middle;
+}
+
+#social-links>.links-titlebar {
+	background: #7cafc2;
+}
+
+#media-links>.links-titlebar {
+	background: #ab4642;
+}
+
+#dev-links>.links-titlebar {
+	background: #a1b56c;
+}
+
+#tools-links>.links-titlebar {
+	background: #ba8baf;
+}
+
+.links-body {
+	margin-top: 8px;
+}
+
+.links-body>a {
+	display: block;
+	text-decoration: none;
+	width: 100%;
+	height: 24px;
+	line-height: 24px;
+	vertical-align: middle;
+	font-size: 8pt;
+	color: #d8d8d8;
+}
+
+.links-body>a:hover {
+	color: #f8f8f8;
+	text-decoration: underline;
+}
+
+.links-body>a:focus, .links-body>a:active {
+	border: none;
+	outline: none;
 }
